crates/cli/tests/snapshots/cli_output_snapshots__cli_telemetry_help.snap
---
source: crates/cli/tests/cli_output_snapshots.rs
expression: stdout
---
Telemetry probe and capture commands

Usage: wheelctl.exe telemetry [OPTIONS] <COMMAND>

Commands:
  probe    Probe telemetry transport for a game
  capture  Capture raw UDP telemetry packets to a binary file
  help     Print this message or the help of the given subcommand(s)

Options:
      --json        Output in JSON format for machine parsing
  -v, --verbose...  Verbose logging
  -h, --help        Print help
