crates/cli/tests/snapshots/cli_output_snapshots__cli_unknown_subcommand_error.snap
---
source: crates/cli/tests/cli_output_snapshots.rs
expression: stderr
---
error: unrecognized subcommand 'nonexistent'

Usage: wheelctl [OPTIONS] <COMMAND>

For more information, try '--help'.
