crates/cli/tests/snapshots/cli_output_snapshots__error_json_format.snap
---
source: crates/cli/tests/cli_output_snapshots.rs
expression: error_output
---
{
  "error": {
    "message": "Device not found: wheel-999",
    "type": "DeviceNotFound"
  },
  "success": false
}
