crates/cli/tests/snapshots/cli_output_snapshots__game_status_json.snap
---
source: crates/cli/tests/cli_output_snapshots.rs
expression: game
---
{
  "active_game": "iracing",
  "car_id": "gt3",
  "success": true,
  "telemetry_active": true,
  "track_id": "spa"
}
