crates/cli/tests/snapshots/cli_output_snapshots__health_event_json.snap
---
source: crates/cli/tests/cli_output_snapshots.rs
expression: event
---
{
  "device_id": "wheel-001",
  "event_type": "PerformanceWarning",
  "message": "High jitter detected",
  "metadata": {}
}
