crates/cli/tests/snapshots/cli_output_snapshots__service_unavailable_error_json.snap
---
source: crates/cli/tests/cli_output_snapshots.rs
expression: error_output
---
{
  "error": {
    "message": "Service unavailable: Connection refused",
    "type": "ServiceUnavailable"
  },
  "success": false
}
