crates/cli/tests/snapshots/cli_output_snapshots__validation_error_json.snap
---
source: crates/cli/tests/cli_output_snapshots.rs
expression: error_output
---
{
  "error": {
    "message": "Validation error: ffbGain must be between 0.0 and 1.0",
    "type": "ValidationError"
  },
  "success": false
}
